# zbot

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  about.md  mod.json
.github/workflows/: build.yml
src/: clickbetweenframescompat.cpp  gui.cpp  gui.hpp  keybinds.cpp  physicsbypass.cpp  playbackmanager.cpp  practicemode.cpp  recordmanager.cpp  replay.hpp  speedhackaudio.cpp  utils.hpp  zBot.hpp
